[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv Email Triage Environment - AI-powered email triage simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenEnv Team" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "openai>=1.3.0",
  "requests>=2.31.0",
  "httpx>=0.25.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "server*"]
